--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-places-autocomplete": "^4.0.1",
     "react-native": "0.74.3",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-pager-view": "6.3.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
@@ -45,6 +47,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/google.maps": "^3.55.12",
+    "@types/googlemaps": "^3.43.3",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
